--- a/Sports Statistics Application/matches.html
+++ b/Sports Statistics Application/matches.html
@@ -27,13 +27,21 @@
         </div>
     </nav>
 
+    <section class="hero">
+        <div class="hero-body">
+            <p class = "hero-text">
+
+            </p>
+        </div>
+    </section>
+
     <nav class="pagination is-centered">
         <div class="pagination-list">
         </div>
       </nav>
 
 
-    <section class="container" id = "container">
+    <section class="container container-matches" id = "container">
     </section>
 </body>
 <script src="js/matches.js">
