--- a/Sports Statistics Application/home.html
+++ b/Sports Statistics Application/home.html
@@ -6,23 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Worlds Tracker</title>
 </head>
 
 <body>
     <section class="showcase">
+
         <div class="container">
+
             <nav class="navbar">
                 <div class="container">
                     <ul class="nav">
                         <li>
                             <a href="home.html">Home</a>
                         </li>
-                        <li>
+                        <li class="need-margin">
                             <a href="standings.html">Standings</a>
                         </li>
-                        <li>
+                        <li class="need-margin">
                             <a href="games.html">Games</a>
                         </li>
                     </ul>
@@ -33,14 +35,12 @@
                 <h1>
                     WORLDS
                 </h1>
-
-
                 <p>
                     The conclusion of the 2022 League of Legends Esports season. Worlds brings the best teams from
-                    across the world to play each other. Track and update scores for your favourite teams.
+                    across the world to play each other. Track, view, and update scores for your favourite teams.
                 </p>
-
             </div>
+
         </div>
     </section>
 </body>
