--- a/Sports Statistics Application/games.html
+++ b/Sports Statistics Application/games.html
@@ -6,27 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Games</title>
 </head>
 
-<body class="black">
+<body class="white-body">
+  
   <nav class="navbar">
     <div class="container">
       <ul class="nav">
         <li>
           <a href="home.html">Home</a>
         </li>
-        <li>
+        <li class="need-margin">
           <a href="standings.html">Standings</a>
         </li>
-        <li>
+        <li class="need-margin">
           <a href="games.html">Games</a>
         </li>
       </ul>
     </div>
   </nav>
-  <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+
+  <nav class="pagination is-centered mt-5" role="navigation" aria-label="pagination">
     <ul class="pagination-list">
       <li>
         <a onclick="handleClick(1)" id="1" class="pagination-link is-current big" aria-label="Page 1"
@@ -55,14 +57,13 @@
       </li>
     </ul>
   </nav>
+
   <nav class="nav">
-
-    <div class="pagination-lister">
-
+    <div class="mini-pagination is-centered">
     </div>
-
   </nav>
-  <section class="container" id="container">
+
+  <section class="container container-games mt-5 mb-5">
   </section>
 
 </body>
