--- a/Sports Statistics Application/matches.html
+++ b/Sports Statistics Application/matches.html
@@ -6,21 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Games</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Team Games</title>
 </head>
 
-<body class = "black">
+<body class="black">
+
     <nav class="navbar">
         <div class="container">
             <ul class="nav">
                 <li>
                     <a href="home.html">Home</a>
                 </li>
-                <li>
+                <li class="need-margin">
                     <a href="standings.html">Standings</a>
                 </li>
-                <li>
+                <li class="need-margin">
                     <a href="games.html">Games</a>
                 </li>
             </ul>
@@ -29,20 +30,19 @@
 
     <section class="hero">
         <div class="hero-body">
-            <p class = "hero-text">
-
+            <p class="hero-text has-text-white">
             </p>
         </div>
     </section>
 
-    <nav class="pagination is-centered">
+    <nav class="pagination is-centered mt-5">
         <div class="pagination-list">
         </div>
-      </nav>
+    </nav>
 
-
-    <section class="container container-matches" id = "container">
+    <section class="container container-matches mb-5">
     </section>
+
 </body>
 <script src="js/matches.js">
 </script>
