--- a/Sports Statistics Application/standings.html
+++ b/Sports Statistics Application/standings.html
@@ -76,7 +76,7 @@
                                     <th onclick="sort('pos', 'B')">Pos</th>
                                     <th>Logo</th>
                                     <th onclick="sort('Name', 'B')" class="name">Name</th>
-                                    <th onclick="sort('Name', 'A')" class="hidden">Name</th>
+                                    <th onclick="sort('Name', 'B')" class="hidden">Name</th>
                                     <th onclick="sort('W', 'B')">Wins</th>
                                     <th onclick="sort('L', 'B')">Losses</th>
                                     <th onclick="sort('pct', 'B')" class="pct">PCT</th>
@@ -104,7 +104,7 @@
                                     <th onclick="sort('pos', 'C')">Pos</th>
                                     <th>Logo</th>
                                     <th onclick="sort('Name', 'C')" class="name">Name</th>
-                                    <th onclick="sort('Name', 'A')" class="hidden">Name</th>
+                                    <th onclick="sort('Name', 'C')" class="hidden">Name</th>
                                     <th onclick="sort('W', 'C')">Wins</th>
                                     <th onclick="sort('L', 'C')">Losses</th>
                                     <th onclick="sort('pct', 'C')" class="pct">PCT</th>
@@ -130,7 +130,7 @@
                                     <th onclick="sort('pos', 'D')">Pos</th>
                                     <th>Logo</th>
                                     <th onclick="sort('Name', 'D')" class="name">Name</th>
-                                    <th onclick="sort('Name', 'A')" class="hidden">Name</th>
+                                    <th onclick="sort('Name', 'D')" class="hidden">Name</th>
                                     <th onclick="sort('W', 'D')">Wins</th>
                                     <th onclick="sort('L', 'D')">Losses</th>
                                     <th onclick="sort('pct', 'D')" class="pct">PCT</th>
