--- a/Sports Statistics Application/matches.html
+++ b/Sports Statistics Application/matches.html
@@ -43,8 +43,16 @@
     <section class="container container-matches mb-5">
     </section>
 
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Worlds Tracker</strong> by Fred. Copyright &copy; Fred is the best
+          </p>
+        </div>
+      </footer>
+
 </body>
 <script src="js/matches.js">
 </script>
 
-</html>
+</html> 
