--- a/Sports Statistics Application/standings.html
+++ b/Sports Statistics Application/standings.html
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <section class="container container-table">
+    <section class="container container-table" id = "container">
 
         <div class="columns mt-5">
             <div class="column is-half is-centered">
@@ -147,6 +147,15 @@
         </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Worlds Tracker</strong> by Fred. Copyright &copy; Fred is the best
+          </p>
+        </div>
+      </footer>
+
 </body>
 <script src="js/standings.js"></script>
 
