--- a/Sports Statistics Application/games.html
+++ b/Sports Statistics Application/games.html
@@ -66,6 +66,14 @@
   <section class="container container-games mt-5 mb-5">
   </section>
 
+  <footer class="footer need">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Worlds Tracker</strong> by Fred. Copyright &copy; Fred is the best
+      </p>
+    </div>
+  </footer>
+
 </body>
 <script src="js/games.js"></script>
 
