--- a/Sports Statistics Application/standings.html
+++ b/Sports Statistics Application/standings.html
@@ -28,17 +28,16 @@
         </div>
     </nav>
 
-
-    <section class="container container-button">
+    <section class="container-button">
         <button class="button inactive">Add Game</button>
         <div class="for-form mt-3">
         </div>
     </section>
 
-    <section class="container container-table" id = "container">
+    <section class="container-table">
 
         <div class="columns mt-5">
-            <div class="column is-half is-centered">
+            <div class="column is-half">
                 <div class="card">
                     <header class="card-header-title">
                         Group A
@@ -92,7 +91,7 @@
         </div>
 
         <div class="columns mt-5">
-            <div class="column is-half is-centered">
+            <div class="column is-half">
                 <div class="card">
                     <header class="card-header-title">
                         Group C
