form changed to dropdown, functionality finish

--- a/Sports Statistics Application/games.html
+++ b/Sports Statistics Application/games.html
@@ -34,29 +34,29 @@
         <a onclick = "handleClick('<<')" id = "<<" class = "pagination-link big"><<</a>
       </li>
       <li>
-        <a onclick="handleClick(1)" id="1" class="pagination-link is-current big" aria-label="Page 1"
+        <a onclick="handleClick(1)" id="1" class="pagination-link is-current big remove" aria-label="Page 1"
           aria-current="page">1</a>
       </li>
       <li>
-        <a onclick="handleClick(2)" id="2" class="pagination-link big" aria-label="Goto page 2">2</a>
+        <a onclick="handleClick(2)" id="2" class="pagination-link big remove" aria-label="Goto page 2">2</a>
       </li>
       <li>
-        <a onclick="handleClick(3)" id="3" class="pagination-link big" aria-label="Goto page 3">3</a>
+        <a onclick="handleClick(3)" id="3" class="pagination-link big remove" aria-label="Goto page 3">3</a>
       </li>
       <li>
-        <a onclick="handleClick(4)" id="4" class="pagination-link big" aria-label="Goto page 3">4</a>
+        <a onclick="handleClick(4)" id="4" class="pagination-link big remove" aria-label="Goto page 3">4</a>
       </li>
       <li>
-        <a onclick="handleClick(5)" id="5" class="pagination-link big" aria-label="Goto page 3">5</a>
+        <a onclick="handleClick(5)" id="5" class="pagination-link big remove" aria-label="Goto page 3">5</a>
       </li>
       <li>
-        <a onclick="handleClick(6)" id="6" class="pagination-link big" aria-label="Goto page 3">6</a>
+        <a onclick="handleClick(6)" id="6" class="pagination-link big remove" aria-label="Goto page 3">6</a>
       </li>
       <li>
-        <a onclick="handleClick(7)" id="7" class="pagination-link big" aria-label="Goto page 3">7</a>
+        <a onclick="handleClick(7)" id="7" class="pagination-link big remove" aria-label="Goto page 3">7</a>
       </li>
       <li>
-        <a onclick="handleClick(8)" id="8" class="pagination-link big" aria-label="Goto page 3">8</a>
+        <a onclick="handleClick(8)" id="8" class="pagination-link big remove" aria-label="Goto page 3">8</a>
       </li>
       <li>
         <a onclick = "handleClick('>>')" id = ">>" class = "pagination-link big">>></a>
