--- a/Sports Statistics Application/standings.html
+++ b/Sports Statistics Application/standings.html
@@ -8,6 +8,7 @@
     <title>Standings</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 </head>
 
 <body class="black">
@@ -31,6 +32,12 @@
     <section class="container-button">
         <button class="button inactive">Add Game</button>
         <div class="for-form mt-3">
+            <p class = "hidden alert" id = "A1">Please follow and fill all fields</p>
+            <p class = "hidden alert" id = "A2">Please pick a team from Group A</p>
+            <p class = "hidden alert" id = "A3">Please pick a team from Group B</p>
+            <p class = "hidden alert" id = "A4">Please pick a team from Group C</p>
+            <p class = "hidden alert" id = "A5">Please pick a team from Group D</p>
+            <p class = "hidden alert" id = "A6">Please enter a valid group</p>
         </div>
     </section>
 
