--- a/CSS Grid Website/index.html
+++ b/CSS Grid Website/index.html
@@ -17,7 +17,7 @@
         <h1>Welcome to Acme Web Solutions</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, commodi. Optio, adipisci? Provident harum
             facere ex quam illo voluptates corporis!</p>
-        <a href="section-b" class="btn">Read More</a>
+        <a href="#section-b" class="btn">Read More</a>
     </div>
     </header>
     <!--Main Area-->
